2003-09-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (CallCommandTraces):	Added safety bit
	* tests/trace.test:	masking to prevent any of the bit values
	TCL_TRACE_*_EXEC from leaking into the flags field of any
	Command struct.  This does not fix [Bug 811483] but helps to
	contain some of its worst symptoms.  Also backported the corrections
	to test trace-28.4 from Vince Darley.

2003-09-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/http/http.tcl (geturl): Correctly check the type of
	boolean-valued options. [Bug 811170]

	* unix/tcl.m4 (SC_ENABLE_FRAMEWORK): Added note to make it clearer
	that this is an OSX feature, not a general Unix feature. [Bug 619440]

2003-09-28  David Gravereaux <davygrvy@pobox.com>

	* win/tclWinPipe.c: The windows port of expect can call
	TclWinAddProcess before any of the other pipe functions.
	Added a missing PipeInit() call to make sure the
	initialization happens.

2003-09-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: ensure SYMROOT exists if OBJROOT is overridden 
	on command line. Replaced explict use of /usr/bin by ${BINDIR}.

2003-09-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:			Fixed [Bug 807243] where
	* tests/trace.test (trace-31,32.*):	the introspection results
	of both [trace info command] and [trace info execution] were getting
	co-mingled.  Thanks to Mark Saye for the report.

	* library/init.tcl (auto_load, auto_import):  Expanded Eric Melski's
	2000-01-28 fix for [Bug 218871] to all potentially troubled uses of
	[info commands] on input data, where glob-special characters could
	cause problems.

2003-09-19  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c: adding (DE)CACHE_STACK_INFO() pairs to
	protect all calls that may cause traces on ::errorInfo or
	::errorCode to corrupt the stack [Bug 804681]

2003-09-10  Don Porter  <dgp@users.sourceforge.net>

	* library/opt/optparse.tcl:	Overlooked dependence of opt 0.4.4